# Cogwheel-DNS

./: CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
apps/cogwheel-server/: Cargo.toml
apps/cogwheel-server/src/: main.rs
apps/cogwheel-web/: index.html  tailwind.config.ts
apps/cogwheel-web/src/: App.tsx  index.css  main.tsx
apps/cogwheel-web/src/components/: app-sidebar.tsx  status-bar.tsx  theme-toggle.tsx
apps/cogwheel-web/src/components/dashboard/: dashboard.tsx  devices-tab.tsx  grease-ai-tab.tsx  overview-tab.tsx  profiles-tab.tsx  settings-tab.tsx
apps/cogwheel-web/src/components/ui/: button.tsx  card.tsx
apps/cogwheel-web/src/contexts/: cogwheel-context.tsx
apps/cogwheel-web/src/lib/: api.ts
crates/cogwheel-api/src/: lib.rs
crates/cogwheel-dns-core/src/: lib.rs
crates/cogwheel-lists/: Cargo.toml
crates/cogwheel-lists/src/: lib.rs
crates/cogwheel-services/: Cargo.toml
crates/cogwheel-services/src/: lib.rs
crates/cogwheel-storage/: Cargo.toml
crates/cogwheel-storage/migrations/: 0003_source_metadata.sql  0004_source_verification_strictness.sql  0005_devices_security_events.sql  0006_device_protection_override.sql  0008_device_service_overrides.sql  0010_config_version.sql
crates/cogwheel-storage/src/: lib.rs
docs/: crate-boundary-guardrails.md  hot-path-guardrails.md  operator-quickstart.md  release-policy.md  reliability-budgets.md  user-quickstart.md
docs/adr/: 0001-crate-boundaries.md  README.md
scripts/: apply-tailscale-dns-intercept.sh  install-home-docker.sh
