[package]
name = "cogwheel-lists"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
cogwheel-policy = { path = "../cogwheel-policy" }
cogwheel-services = { path = "../cogwheel-services" }
