[package]
name = "cogwheel-storage"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
cogwheel-policy = { path = "../cogwheel-policy" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64.workspace = true
rand = { version = "0.8", features = ["std", "std_rng"] }
getrandom = "0.4.2"
